fixing so pure-template is hidden and only the actual slide is visible

--- a/modules/ik_frontend/sass/_layouts.scss
+++ b/modules/ik_frontend/sass/_layouts.scss
@@ -1,10 +1,16 @@
 /*
 * Layouts default styling
 */
-
+#pure-template{
+  display: none;
+}
 #slide-container {
   width: 100%;
   height: 100%;
+
+  #pure-template {
+    display: block;
+  }
 }
 
 .slide {
